[package]
name = "amazon-kinesis-component"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
aws-credential-types = "1.2.1"
aws-sigv4 = "1.2.7"
aws-smithy-runtime-api = "1.7.3"
base64 = "0.22.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }
wit-bindgen = "0.34.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.15"
pretty_assertions = "1.4.1"
wit-deps = "0.4.0"
